--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <description>Builds, tests, and runs the project bibigrid.</description>
     <import file="nbproject/build-impl.xml"/>
     
-     <tstamp>
+    <tstamp>
         <format property="build-date" pattern="yyyy-MM-dd HH:mm:ss" />
     </tstamp>
     <property name="version" value="1.0"/>
@@ -19,7 +19,13 @@
     <property name="full.jar" value="dist/bibigrid-java-full.jar"/>
     
     <ivy:settings url="http://bibiserv.techfak.uni-bielefeld.de/ivy-rep/ivysettings.xml"/>
-
+    
+    <target name="report" depends="init">
+        <mkdir dir="report" />
+        <ivy:resolve type="${ivy.resolve.types}"/>
+        <ivy:report todir="report" />
+    </target>
+    
     <target name="resolve" description="retrieve dependencies with ivy">
         <ivy:retrieve />
     </target>
@@ -32,128 +38,142 @@
     <property name="monitor.jar" value="dist/monitor.jar"/>
     
     <target name="fulljar" depends="resolve,jar,-post-jar,monitor">
-      <jar destfile="${full.jar}">
-          <manifest>
-              <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.StartUpOgeCluster"/>
-              <attribute name="Bibigrid-build-date" value="${build-date}" />
-              <attribute name="Bibigrid-version" value="${version}" />
-          </manifest>
+        <jar destfile="${full.jar}">
+            <manifest>
+                <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.StartUpOgeCluster"/>
+                <attribute name="Bibigrid-build-date" value="${build-date}" />
+                <attribute name="Bibigrid-version" value="${version}" />
+            </manifest>
         
-        <zipfileset excludes="META-INF/*" src="dist/bibigrid.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.4.5.jar">
-            <exclude name="com/amazonaws/services/cloudformation/**/*" />
-        <exclude name="com/amazonaws/services/cloudfront/**/*" />
-        <exclude name="com/amazonaws/services/cloudfront_2012_03_15/**/*" />
-        <exclude name="com/amazonaws/services/cloudsearch/**/*" />
-        <exclude name="com/amazonaws/services/cloudwatch/**/*" />
-        <exclude name="com/amazonaws/services/datapipeline/**/*" />
-        <exclude name="com/amazonaws/services/directconnect/**/*" />
-        <exclude name="com/amazonaws/services/dynamodb/**/*" />
-        <exclude name="com/amazonaws/services/dynamodbv2/**/*" />
-        <exclude name="com/amazonaws/services/elasticache/**/*" />
-        <exclude name="com/amazonaws/services/elasticbeanstalk/**/*" />
-        <exclude name="com/amazonaws/services/elasticloadbalancing/**/*" />
-        <exclude name="com/amazonaws/services/elasticmapreduce/**/*" />
-        <exclude name="com/amazonaws/services/elastictranscoder/**/*" />
-        <exclude name="com/amazonaws/services/glacier/**/*" />
-        <exclude name="com/amazonaws/services/identitymanagement/**/*" />
-        <exclude name="com/amazonaws/services/importexport/**/*" />
-        <exclude name="com/amazonaws/services/opsworks/**/*" />
-        <exclude name="com/amazonaws/services/rds/**/*" />
-        <exclude name="com/amazonaws/services/redshift/**/*" />
-        <exclude name="com/amazonaws/services/route53/**/*" />
-        <exclude name="com/amazonaws/services/securitytoken/**/*" />
-        <exclude name="com/amazonaws/services/simpledb/**/*" />
-        <exclude name="com/amazonaws/services/simpleemail/**/*" />
-        <exclude name="com/amazonaws/services/simpleworkflow/**/*" />
-        <exclude name="com/amazonaws/services/sns/**/*" />
-        <exclude name="com/amazonaws/services/sqs/**/*" />
-        <exclude name="com/amazonaws/services/storagegateway/**/*" />
-        <exclude name="com/amazonaws/services/support/**/*" />
-        <exclude name="com/amazonaws/services/s3/**/*" />
-        </zipfileset>
-        <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.4.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpclient-4.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpcore-4.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-core-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-mapper-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.11.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.11.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.5.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-cli-1.2.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jsch-0.1.50.jar"/>
-        <fileset file="dist/monitor.jar" />
-      </jar>
-      <copy file="bibigrid.sh" tofile="dist/bibigrid"/>
-      <chmod file="dist/bibigrid" perm="+x"/>
-      <delete file="dist/bibigrid-as.jar"/>
-      <delete dir="dist/lib"/>
-      <delete file="dist/README.TXT"/>
-      <antcall target="monitor"/>
+            <zipfileset excludes="META-INF/*" src="dist/bibigrid.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.6.12.jar">
+                <exclude name="com/amazonaws/services/cloudformation/**/*" />
+                <exclude name="com/amazonaws/services/cloudfront/**/*" />
+                <exclude name="com/amazonaws/services/cloudfront_2012_03_15/**/*" />
+                <exclude name="com/amazonaws/services/cloudsearch/**/*" />
+                <exclude name="com/amazonaws/services/cloudwatch/**/*" />
+                <exclude name="com/amazonaws/services/datapipeline/**/*" />
+                <exclude name="com/amazonaws/services/directconnect/**/*" />
+                <exclude name="com/amazonaws/services/dynamodb/**/*" />
+                <exclude name="com/amazonaws/services/dynamodbv2/**/*" />
+                <exclude name="com/amazonaws/services/elasticache/**/*" />
+                <exclude name="com/amazonaws/services/elasticbeanstalk/**/*" />
+                <exclude name="com/amazonaws/services/elasticloadbalancing/**/*" />
+                <exclude name="com/amazonaws/services/elasticmapreduce/**/*" />
+                <exclude name="com/amazonaws/services/elastictranscoder/**/*" />
+                <exclude name="com/amazonaws/services/glacier/**/*" />
+                <exclude name="com/amazonaws/services/identitymanagement/**/*" />
+                <exclude name="com/amazonaws/services/importexport/**/*" />
+                <exclude name="com/amazonaws/services/opsworks/**/*" />
+                <exclude name="com/amazonaws/services/rds/**/*" />
+                <exclude name="com/amazonaws/services/redshift/**/*" />
+                <exclude name="com/amazonaws/services/route53/**/*" />
+                <exclude name="com/amazonaws/services/securitytoken/**/*" />
+                <exclude name="com/amazonaws/services/simpledb/**/*" />
+                <exclude name="com/amazonaws/services/simpleemail/**/*" />
+                <exclude name="com/amazonaws/services/simpleworkflow/**/*" />
+                <exclude name="com/amazonaws/services/sns/**/*" />
+                <exclude name="com/amazonaws/services/sqs/**/*" />
+                <exclude name="com/amazonaws/services/storagegateway/**/*" />
+                <exclude name="com/amazonaws/services/support/**/*" />
+                <exclude name="com/amazonaws/services/s3/**/*" />
+            </zipfileset>
+            <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.4.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpclient-4.2.3.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpcore-4.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-core-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-annotations-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-databind-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.5.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-cli-1.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jsch-0.1.50.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/freemarker-2.3.18.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aspectjweaver-1.6.12.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aspectjrt-1.6.12.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/mail-1.4.3.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/joda-time-2.2.jar"/>
+            <fileset file="dist/monitor.jar" />
+        </jar>
+        <copy file="bibigrid.sh" tofile="dist/bibigrid"/>
+        <chmod file="dist/bibigrid" perm="+x"/>
+        <delete file="dist/bibigrid-as.jar"/>
+        <delete dir="dist/lib"/>
+        <delete file="dist/README.TXT"/>
+        <antcall target="monitor"/>
     </target>
 
 
     <target name="monitor">
-      <jar destfile="${monitor.jar}">
-          <manifest>
-              <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.monitor.MainMonitor"/>
-              <attribute name="Bibigrid-build-date" value="${build-date}" />
-              <attribute name="Bibigrid-version" value="${version}" />
-          </manifest>
-        <zipfileset excludes="META-INF/*" src="dist/bibigrid.jar">
-            <exclude name="de/unibi/cebitec/bibigrid/ctrl/**/*" />
-            <exclude name="de/unibi/cebitec/bibigrid/exc/*" />
-            <exclude name="de/unibi/cebitec/bibigrid/model/**/*" />
-        </zipfileset>
-        <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.4.5.jar">
-        <exclude name="com/amazonaws/services/cloudformation/**/*" />
-        <exclude name="com/amazonaws/services/cloudfront/**/*" />
-        <exclude name="com/amazonaws/services/cloudfront_2012_03_15/**/*" />
-        <exclude name="com/amazonaws/services/cloudsearch/**/*" />
-        <exclude name="com/amazonaws/services/cloudwatch/**/*" />
-        <exclude name="com/amazonaws/services/datapipeline/**/*" />
-        <exclude name="com/amazonaws/services/directconnect/**/*" />
-        <exclude name="com/amazonaws/services/dynamodb/**/*" />
-        <exclude name="com/amazonaws/services/dynamodbv2/**/*" />
-        <exclude name="com/amazonaws/services/elasticache/**/*" />
-        <exclude name="com/amazonaws/services/elasticbeanstalk/**/*" />
-        <exclude name="com/amazonaws/services/elasticloadbalancing/**/*" />
-        <exclude name="com/amazonaws/services/elasticmapreduce/**/*" />
-        <exclude name="com/amazonaws/services/elastictranscoder/**/*" />
-        <exclude name="com/amazonaws/services/glacier/**/*" />
-        <exclude name="com/amazonaws/services/identitymanagement/**/*" />
-        <exclude name="com/amazonaws/services/importexport/**/*" />
-        <exclude name="com/amazonaws/services/opsworks/**/*" />
-        <exclude name="com/amazonaws/services/rds/**/*" />
-        <exclude name="com/amazonaws/services/redshift/**/*" />
-        <exclude name="com/amazonaws/services/route53/**/*" />
-        <exclude name="com/amazonaws/services/securitytoken/**/*" />
-        <exclude name="com/amazonaws/services/simpledb/**/*" />
-        <exclude name="com/amazonaws/services/simpleemail/**/*" />
-        <exclude name="com/amazonaws/services/simpleworkflow/**/*" />
-        <exclude name="com/amazonaws/services/sns/**/*" />
-        <exclude name="com/amazonaws/services/sqs/**/*" />
-        <exclude name="com/amazonaws/services/storagegateway/**/*" />
-        <exclude name="com/amazonaws/services/support/**/*" />
-        <exclude name="com/amazonaws/services/s3/**/*" />
-        </zipfileset>
-        <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.4.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpclient-4.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpcore-4.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-core-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-mapper-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.11.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.11.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.5.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-io-2.4.jar"/>
-      </jar>
-      <delete dir="dist/lib"/>
+        <jar destfile="${monitor.jar}">
+            <manifest>
+                <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.monitor.MainMonitor"/>
+                <attribute name="Bibigrid-build-date" value="${build-date}" />
+                <attribute name="Bibigrid-version" value="${version}" />
+            </manifest>
+            <zipfileset excludes="META-INF/*" src="dist/bibigrid.jar">
+                <exclude name="de/unibi/cebitec/bibigrid/ctrl/**/*" />
+                <exclude name="de/unibi/cebitec/bibigrid/exc/*" />
+                <exclude name="de/unibi/cebitec/bibigrid/model/**/*" />
+            </zipfileset>
+            <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.6.12.jar">
+                <exclude name="com/amazonaws/services/cloudformation/**/*" />
+                <exclude name="com/amazonaws/services/cloudfront/**/*" />
+                <exclude name="com/amazonaws/services/cloudfront_2012_03_15/**/*" />
+                <exclude name="com/amazonaws/services/cloudsearch/**/*" />
+                <exclude name="com/amazonaws/services/cloudwatch/**/*" />
+                <exclude name="com/amazonaws/services/datapipeline/**/*" />
+                <exclude name="com/amazonaws/services/directconnect/**/*" />
+                <exclude name="com/amazonaws/services/dynamodb/**/*" />
+                <exclude name="com/amazonaws/services/dynamodbv2/**/*" />
+                <exclude name="com/amazonaws/services/elasticache/**/*" />
+                <exclude name="com/amazonaws/services/elasticbeanstalk/**/*" />
+                <exclude name="com/amazonaws/services/elasticloadbalancing/**/*" />
+                <exclude name="com/amazonaws/services/elasticmapreduce/**/*" />
+                <exclude name="com/amazonaws/services/elastictranscoder/**/*" />
+                <exclude name="com/amazonaws/services/glacier/**/*" />
+                <exclude name="com/amazonaws/services/identitymanagement/**/*" />
+                <exclude name="com/amazonaws/services/importexport/**/*" />
+                <exclude name="com/amazonaws/services/opsworks/**/*" />
+                <exclude name="com/amazonaws/services/rds/**/*" />
+                <exclude name="com/amazonaws/services/redshift/**/*" />
+                <exclude name="com/amazonaws/services/route53/**/*" />
+                <exclude name="com/amazonaws/services/securitytoken/**/*" />
+                <exclude name="com/amazonaws/services/simpledb/**/*" />
+                <exclude name="com/amazonaws/services/simpleemail/**/*" />
+                <exclude name="com/amazonaws/services/simpleworkflow/**/*" />
+                <exclude name="com/amazonaws/services/sns/**/*" />
+                <exclude name="com/amazonaws/services/sqs/**/*" />
+                <exclude name="com/amazonaws/services/storagegateway/**/*" />
+                <exclude name="com/amazonaws/services/support/**/*" />
+                <exclude name="com/amazonaws/services/s3/**/*" />
+            </zipfileset>
+            <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.4.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpclient-4.2.3.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpcore-4.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-core-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-annotations-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-databind-2.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.5.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-cli-1.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jsch-0.1.50.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/freemarker-2.3.18.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aspectjweaver-1.6.12.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aspectjrt-1.6.12.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/mail-1.4.3.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/joda-time-2.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-io-2.4.jar"/>
+        </jar>
+        <delete dir="dist/lib"/>
     </target>
     <!--
 
