--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,18 +27,26 @@ dist.jar=${dist.dir}/bibigrid.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.aws-java-sdk-1.4.5.jar=lib/aws-java-sdk-1.4.5.jar
+file.reference.aspectjrt-1.6.12.jar=lib/aspectjrt-1.6.12.jar
+file.reference.aspectjweaver-1.6.12.jar=lib/aspectjweaver-1.6.12.jar
+file.reference.aws-java-sdk-1.6.12.jar=lib/aws-java-sdk-1.6.12.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-codec-1.4.jar=lib/commons-codec-1.4.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
-file.reference.httpclient-4.1.1.jar=lib/httpclient-4.1.1.jar
-file.reference.jackson-core-asl-1.8.7.jar=lib/jackson-core-asl-1.8.7.jar
-file.reference.jackson-mapper-asl-1.8.7.jar=lib/jackson-mapper-asl-1.8.7.jar
+file.reference.freemarker-2.3.18.jar=lib/freemarker-2.3.18.jar
+file.reference.httpclient-4.2.3.jar=lib/httpclient-4.2.3.jar
+file.reference.httpcore-4.2.jar=lib/httpcore-4.2.jar
+file.reference.jackson-annotations-2.1.1.jar=lib/jackson-annotations-2.1.1.jar
+file.reference.jackson-core-2.1.1.jar=lib/jackson-core-2.1.1.jar
+file.reference.jackson-databind-2.1.1.jar=lib/jackson-databind-2.1.1.jar
 file.reference.jsch-0.1.50.jar=lib/jsch-0.1.50.jar
+file.reference.log4j-1.2.16.jar=lib/log4j-1.2.16.jar
 file.reference.logback-classic-1.0.11.jar=lib/logback-classic-1.0.11.jar
 file.reference.logback-core-1.0.11.jar=lib/logback-core-1.0.11.jar
+file.reference.mail-1.4.3.jar=lib/mail-1.4.3.jar
 file.reference.slf4j-api-1.7.5.jar=lib/slf4j-api-1.7.5.jar
+file.reference.slf4j-log4j12-1.7.5.jar=lib/slf4j-log4j12-1.7.5.jar
 file.reference.stax-1.2.0.jar=lib/stax-1.2.0.jar
 file.reference.stax-api-1.0.1.jar=lib/stax-api-1.0.1.jar
 includes=**
@@ -46,20 +54,28 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.httpclient-4.1.1.jar}:\
-    ${file.reference.jackson-core-asl-1.8.7.jar}:\
-    ${file.reference.jackson-mapper-asl-1.8.7.jar}:\
-    ${file.reference.stax-1.2.0.jar}:\
-    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.aspectjrt-1.6.12.jar}:\
+    ${file.reference.aspectjweaver-1.6.12.jar}:\
+    ${file.reference.aws-java-sdk-1.6.12.jar}:\
+    ${file.reference.commons-cli-1.2.jar}:\
     ${file.reference.commons-codec-1.4.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.freemarker-2.3.18.jar}:\
+    ${file.reference.httpclient-4.2.3.jar}:\
+    ${file.reference.httpcore-4.2.jar}:\
+    ${file.reference.jackson-annotations-2.1.1.jar}:\
+    ${file.reference.jackson-core-2.1.1.jar}:\
+    ${file.reference.jackson-databind-2.1.1.jar}:\
     ${file.reference.jsch-0.1.50.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
     ${file.reference.logback-classic-1.0.11.jar}:\
     ${file.reference.logback-core-1.0.11.jar}:\
-    ${file.reference.commons-cli-1.2.jar}:\
-    ${file.reference.aws-java-sdk-1.4.5.jar}:\
+    ${file.reference.mail-1.4.3.jar}:\
     ${file.reference.slf4j-api-1.7.5.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.slf4j-log4j12-1.7.5.jar}:\
+    ${file.reference.stax-1.2.0.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,8 +95,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.aws-java-sdk-1.4.5.jar=lib/aws-java-sdk-1.4.5-javadoc.jar
-javadoc.reference.commons-cli-1.2.jar=lib/commons-cli-1.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -110,6 +124,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.aws-java-sdk-1.4.5.jar=lib/aws-java-sdk-1.4.5-sources.jar
 src.dir=src
 test.src.dir=test
