--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,21 +27,30 @@ dist.jar=${dist.dir}/bibigrid.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.aopalliance-1.0.jar=lib/aopalliance-1.0.jar
 file.reference.aspectjrt-1.6.12.jar=lib/aspectjrt-1.6.12.jar
 file.reference.aspectjrt-1.6.12.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/aspectjrt-1.6.12.jar
 file.reference.aspectjweaver-1.6.12.jar=lib/aspectjweaver-1.6.12.jar
 file.reference.aspectjweaver-1.6.12.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/aspectjweaver-1.6.12.jar
 file.reference.aws-java-sdk-1.10.7.jar=lib/aws-java-sdk-1.10.7.jar
 file.reference.aws-java-sdk-1.9.27.jar=/home/jsteiner/CloudComputing/jclouds/lib/aws-java-sdk-1.9.27.jar
+file.reference.bcpkix-jdk15on-1.49.jar=lib/bcpkix-jdk15on-1.49.jar
+file.reference.bcprov-ext-jdk15on-1.49.jar=lib/bcprov-ext-jdk15on-1.49.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-cli-1.2.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/commons-cli-1.2.jar
 file.reference.commons-codec-1.6.jar=lib/commons-codec-1.6.jar
+file.reference.commons-codec-1.6.jar-1=lib/commons-codec-1.6.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.commons-io-2.4.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/commons-io-2.4.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
 file.reference.commons-logging-1.1.3.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/commons-logging-1.1.3.jar
 file.reference.freemarker-2.3.18.jar=lib/freemarker-2.3.18.jar
 file.reference.freemarker-2.3.18.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/freemarker-2.3.18.jar
+file.reference.gson-2.3.jar=lib/gson-2.3.jar
+file.reference.guava-16.0.1.jar=lib/guava-16.0.1.jar
+file.reference.guice-3.0.jar=lib/guice-3.0.jar
+file.reference.guice-assistedinject-3.0.jar=lib/guice-assistedinject-3.0.jar
+file.reference.guice-multibindings-3.0.jar=lib/guice-multibindings-3.0.jar
 file.reference.httpclient-4.3.jar=lib/httpclient-4.3.jar
 file.reference.httpclient-4.3.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/httpclient-4.3.jar
 file.reference.httpcore-4.3.jar=lib/httpcore-4.3.jar
@@ -52,28 +61,58 @@ file.reference.jackson-core-2.3.2.jar=/home/jsteiner/CloudComputing/jclouds/lib/
 file.reference.jackson-core-2.5.3.jar=lib/jackson-core-2.5.3.jar
 file.reference.jackson-databind-2.3.2.jar=/home/jsteiner/CloudComputing/jclouds/lib/jackson-databind-2.3.2.jar
 file.reference.jackson-databind-2.5.3.jar=lib/jackson-databind-2.5.3.jar
+file.reference.javax.inject-1.jar=lib/javax.inject-1.jar
+file.reference.jclouds-blobstore-1.9.1.jar=lib/jclouds-blobstore-1.9.1.jar
+file.reference.jclouds-bouncycastle-1.9.1.jar=lib/jclouds-bouncycastle-1.9.1.jar
+file.reference.jclouds-compute-1.9.1.jar=lib/jclouds-compute-1.9.1.jar
+file.reference.jclouds-core-1.9.1.jar=lib/jclouds-core-1.9.1.jar
+file.reference.jclouds-okhttp-1.9.1.jar=lib/jclouds-okhttp-1.9.1.jar
+file.reference.jclouds-scriptbuilder-1.9.1.jar=lib/jclouds-scriptbuilder-1.9.1.jar
+file.reference.jclouds-slf4j-1.9.1.jar=lib/jclouds-slf4j-1.9.1.jar
+file.reference.jclouds-sshj-1.9.1.jar=lib/jclouds-sshj-1.9.1.jar
+file.reference.jna-4.1.0.jar=lib/jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=lib/jna-platform-4.1.0.jar
 file.reference.joda-time-2.2.jar=/home/jsteiner/CloudComputing/jclouds/lib/joda-time-2.2.jar
 file.reference.joda-time-2.8.1.jar=lib/joda-time-2.8.1.jar
 file.reference.jsch-0.1.50.jar=/home/jsteiner/CloudComputing/jclouds/lib/jsch-0.1.50.jar
 file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
+file.reference.jsch.agentproxy.connector-factory-0.0.8.jar=lib/jsch.agentproxy.connector-factory-0.0.8.jar
+file.reference.jsch.agentproxy.core-0.0.8.jar=lib/jsch.agentproxy.core-0.0.8.jar
+file.reference.jsch.agentproxy.pageant-0.0.8.jar=lib/jsch.agentproxy.pageant-0.0.8.jar
+file.reference.jsch.agentproxy.sshagent-0.0.8.jar=lib/jsch.agentproxy.sshagent-0.0.8.jar
+file.reference.jsch.agentproxy.sshj-0.0.8.jar=lib/jsch.agentproxy.sshj-0.0.8.jar
+file.reference.jsch.agentproxy.usocket-jna-0.0.8.jar=lib/jsch.agentproxy.usocket-jna-0.0.8.jar
+file.reference.jsch.agentproxy.usocket-nc-0.0.8.jar=lib/jsch.agentproxy.usocket-nc-0.0.8.jar
+file.reference.jsr250-api-1.0.jar=lib/jsr250-api-1.0.jar
+file.reference.jsr311-api-1.1.1.jar=lib/jsr311-api-1.1.1.jar
 file.reference.log4j-1.2.16.jar=lib/log4j-1.2.16.jar
-file.reference.log4j-1.2.16.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/log4j-1.2.16.jar
-file.reference.logback-classic-1.0.11.jar=lib/logback-classic-1.0.11.jar
-file.reference.logback-classic-1.0.11.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/logback-classic-1.0.11.jar
+file.reference.logback-classic-1.0.11.jar=/home/jsteiner/CeBiTec/Work/bibigrid/lib/logback-classic-1.0.11.jar
 file.reference.logback-core-1.0.11.jar=lib/logback-core-1.0.11.jar
 file.reference.logback-core-1.0.11.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/logback-core-1.0.11.jar
+file.reference.logback-core-1.0.13.jar=lib/logback-core-1.0.13.jar
 file.reference.mail-1.4.6.jar=lib/mail-1.4.6.jar
 file.reference.mail-1.4.6.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/mail-1.4.6.jar
+file.reference.mysql-connector-java-5.1.25.jar=lib/mysql-connector-java-5.1.25.jar
+file.reference.okhttp-2.2.0.jar=lib/okhttp-2.2.0.jar
+file.reference.okio-1.2.0.jar=lib/okio-1.2.0.jar
+file.reference.openstack-cinder-1.9.1.jar=lib/openstack-cinder-1.9.1.jar
+file.reference.openstack-glance-1.9.1.jar=lib/openstack-glance-1.9.1.jar
+file.reference.openstack-keystone-1.9.1.jar=lib/openstack-keystone-1.9.1.jar
+file.reference.openstack-marconi-1.9.1.jar=lib/openstack-marconi-1.9.1.jar
+file.reference.openstack-neutron-1.9.1.jar=lib/openstack-neutron-1.9.1.jar
+file.reference.openstack-nova-1.9.1.jar=lib/openstack-nova-1.9.1.jar
+file.reference.openstack-swift-1.9.1.jar=lib/openstack-swift-1.9.1.jar
+file.reference.openstack-trove-1.9.1.jar=lib/openstack-trove-1.9.1.jar
+file.reference.rocoto-6.2.jar=lib/rocoto-6.2.jar
 file.reference.slf4j-api-1.7.5.jar=lib/slf4j-api-1.7.5.jar
 file.reference.slf4j-api-1.7.5.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/slf4j-api-1.7.5.jar
-file.reference.slf4j-log4j12-1.7.5.jar=lib/slf4j-log4j12-1.7.5.jar
-file.reference.slf4j-log4j12-1.7.5.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/slf4j-log4j12-1.7.5.jar
 file.reference.spring-beans-3.0.7.jar=lib/spring-beans-3.0.7.jar
 file.reference.spring-beans-3.0.7.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/spring-beans-3.0.7.jar
 file.reference.spring-context-3.0.7.jar=lib/spring-context-3.0.7.jar
 file.reference.spring-context-3.0.7.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/spring-context-3.0.7.jar
 file.reference.spring-core-3.0.7.jar=lib/spring-core-3.0.7.jar
 file.reference.spring-core-3.0.7.jar-1=/home/jsteiner/CloudComputing/jclouds/lib/spring-core-3.0.7.jar
+file.reference.sshj-0.8.1.jar=lib/sshj-0.8.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -95,11 +134,9 @@ javac.classpath=\
     ${file.reference.joda-time-2.8.1.jar}:\
     ${file.reference.jsch-0.1.53.jar}:\
     ${file.reference.log4j-1.2.16.jar}:\
-    ${file.reference.logback-classic-1.0.11.jar}:\
     ${file.reference.logback-core-1.0.11.jar}:\
     ${file.reference.mail-1.4.6.jar}:\
     ${file.reference.slf4j-api-1.7.5.jar}:\
-    ${file.reference.slf4j-log4j12-1.7.5.jar}:\
     ${file.reference.spring-beans-3.0.7.jar}:\
     ${file.reference.spring-context-3.0.7.jar}:\
     ${file.reference.spring-core-3.0.7.jar}:\
@@ -117,15 +154,56 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.3.2.jar}:\
     ${file.reference.joda-time-2.2.jar}:\
     ${file.reference.jsch-0.1.50.jar}:\
-    ${file.reference.log4j-1.2.16.jar-1}:\
-    ${file.reference.logback-classic-1.0.11.jar-1}:\
     ${file.reference.logback-core-1.0.11.jar-1}:\
     ${file.reference.mail-1.4.6.jar-1}:\
     ${file.reference.slf4j-api-1.7.5.jar-1}:\
-    ${file.reference.slf4j-log4j12-1.7.5.jar-1}:\
     ${file.reference.spring-beans-3.0.7.jar-1}:\
     ${file.reference.spring-context-3.0.7.jar-1}:\
-    ${file.reference.spring-core-3.0.7.jar-1}
+    ${file.reference.spring-core-3.0.7.jar-1}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.bcpkix-jdk15on-1.49.jar}:\
+    ${file.reference.bcprov-ext-jdk15on-1.49.jar}:\
+    ${file.reference.commons-codec-1.6.jar-1}:\
+    ${file.reference.gson-2.3.jar}:\
+    ${file.reference.guava-16.0.1.jar}:\
+    ${file.reference.guice-3.0.jar}:\
+    ${file.reference.guice-assistedinject-3.0.jar}:\
+    ${file.reference.guice-multibindings-3.0.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.jclouds-blobstore-1.9.1.jar}:\
+    ${file.reference.jclouds-bouncycastle-1.9.1.jar}:\
+    ${file.reference.jclouds-compute-1.9.1.jar}:\
+    ${file.reference.jclouds-core-1.9.1.jar}:\
+    ${file.reference.jclouds-okhttp-1.9.1.jar}:\
+    ${file.reference.jclouds-scriptbuilder-1.9.1.jar}:\
+    ${file.reference.jclouds-slf4j-1.9.1.jar}:\
+    ${file.reference.jclouds-sshj-1.9.1.jar}:\
+    ${file.reference.jna-4.1.0.jar}:\
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${file.reference.jsch.agentproxy.connector-factory-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.core-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.pageant-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.sshagent-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.sshj-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.usocket-jna-0.0.8.jar}:\
+    ${file.reference.jsch.agentproxy.usocket-nc-0.0.8.jar}:\
+    ${file.reference.jsr250-api-1.0.jar}:\
+    ${file.reference.jsr311-api-1.1.1.jar}:\
+    ${file.reference.logback-core-1.0.13.jar}:\
+    ${file.reference.mysql-connector-java-5.1.25.jar}:\
+    ${file.reference.okhttp-2.2.0.jar}:\
+    ${file.reference.okio-1.2.0.jar}:\
+    ${file.reference.openstack-cinder-1.9.1.jar}:\
+    ${file.reference.openstack-glance-1.9.1.jar}:\
+    ${file.reference.openstack-keystone-1.9.1.jar}:\
+    ${file.reference.openstack-marconi-1.9.1.jar}:\
+    ${file.reference.openstack-neutron-1.9.1.jar}:\
+    ${file.reference.openstack-nova-1.9.1.jar}:\
+    ${file.reference.openstack-swift-1.9.1.jar}:\
+    ${file.reference.openstack-trove-1.9.1.jar}:\
+    ${file.reference.rocoto-6.2.jar}:\
+    ${file.reference.sshj-0.8.1.jar}:\
+    ${file.reference.logback-classic-1.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -162,7 +240,7 @@ main.class=de.unibi.cebitec.bibigrid.StartUpOgeCluster
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
